--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <div class="container-fluid" style="min-height: 100vh">
         <div class="row">
-            <div class="col-md-8 offset-md-2">
+            <div class="col-md-10 offset-md-1">
                 <div class="d-none d-md-block">
                     <div class="title my-3"></div>
-                    <div class="header mb-5"></div>
+                    <div class="header mb-3"></div>
                 </div>
                 <div class="d-block d-md-none">
                     <div class="title_s mt-3 mb-1"></div>
@@ -27,21 +27,23 @@
                     <div class="header_s2 mb-3"></div>
                 </div>
                 <div class="col-8 offset-2">
-                    <div class="d-flex justify-content-center">
-                        <wired-card elevation="3" class="p-3">
+                    <div class="d-flex justify-content-start">
+                        <wired-card elevation="3" class="p-3 mr-md-5">
                             <h4>ReadMe</h4>
                             <p>
-                                目前只支援 Chrome，使用方法把下方按鈕拖到書籤列就好。
+                                目前支援 Chrome，使用方法把下方按鈕拖到書籤列就好。
                                 <br> 其他瀏覽器使用方法請到
                                 <a href="#" target="_blank">Github</a> 查看詳情。
-                                <br>
-                                非營利用途，如有侵權請立即告知。
+                                <br> 非營利用途，如有侵權請立即告知。
                             </p>
                         </wired-card>
+                        <div class="d-none d-md-block">
+                            <img class="img-fluid" src="./img/add.gif" alt="how to use">
+                        </div>
                     </div>
-                    <div class="d-flex justify-content-center mt-5">
+                    <div class="d-flex justify-content-center mt-4">
                         <wired-button elevation="3" aria-label="Pack Notes">
-                            <a class="bookmark" href="#">
+                            <a class="bookmark" href='javascript: !function(e){if("hackmd.io"!=window.location.host||"/recent"!=window.location.pathname)confirm("Please goto to HackMd homepage")&&(window.location.href="https://hackmd.io/recent");else{if(function(e){for(var t=e+"=",r=decodeURIComponent(document.cookie).split(";"),n=0;n<r.length;n++){for(var i=r[n];" "==i.charAt(0);)i=i.substring(1);if(0==i.indexOf(t))return i.substring(t.length,i.length)}return""}("loginstate")){var t=["https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js","https://cdnjs.cloudflare.com/ajax/libs/jszip-utils/0.0.2/jszip-utils.min.js","https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"],r=e.createElement("P");r.className="hide",r.id="result";var n=document.createElement("DIV");n.setAttribute("positin","width: 0%;"),n.appendChild(r);var i=e.createElement("DIV");i.className="progress-bar",i.setAttribute("style","width: 0%;"),i.setAttribute("role","progressbar"),i.setAttribute("aria-valuenow","0"),i.setAttribute("aria-valuemin","0"),i.setAttribute("aria-valuemax","100");var o=e.createElement("DIV");o.className="progress hide",o.id="progress_bar",o.appendChild(i),n.appendChild(o),e.querySelector(".cover-container").insertBefore(n,e.querySelector("#recent"));for(var s=0;s<3;s++){var a=document.createElement("script");a.type="text/javascript",a.src=t[s],e.body.appendChild(a)}!function e(){void 0==window.saveAs||void 0==window.JSZipUtils||void 0==window.JSZip?setTimeout(e,1e3):function(){var e=[],t=new XMLHttpRequest;t.open("get","https://hackmd.io/history",!0),t.send(null),t.onload=function(r){if(""==t.responseText)window.alert("Someing errors, please try later");else{e=JSON.parse(t.responseText).history;var i=prompt("請選擇下載類型:\na: 全部, s: 收藏, o: 其他(不包含收藏)","a");"s"==i?e=e.filter(function(e,t,r){return e.pinned}):"o"==i&&(e=e.filter(function(e,t,r){return!e.pinned})),function(){for(var t=new JSZip,r=[],i=0,a=1;i<e.length;i++){var l="https://hackmd.io/"+e[i].id+"/download",c=e[i].text.replace(/<|>|\?|\:|"|\/|\\|\*|\||;*/g,"")+".md";-1==r.indexOf(c)?r.push(c):(c=e[i].text.replace(/<|>|\?|\:|"|\/|\\|\*|\||;*/g,"")+"("+a+").md",a++),t.file(c,n(l),{binary:!0})}t.generateAsync({type:"blob"},function(e){var t,r="progression : "+e.percent.toFixed(2)+" %";e.currentFile&&(r+=", current file = "+e.currentFile),o(r),t=0|e.percent,$("#progress_bar").removeClass("hide").find(".progress-bar").attr("aria-valuenow",t).css({width:t+"%"})}).then(function(e){saveAs(e,"example.zip"),o("done !")},function(e){s(e)})}()}};var r=window.Promise;r||(r=JSZip.external.Promise);function n(e){return new r(function(t,r){JSZipUtils.getBinaryContent(e,function(e,n){e?r(e):t(n)})})}function i(){$("#result").removeClass().text("")}function o(e){i(),$("#result").addClass("alert alert-success").text(e)}function s(e){i(),$("#result").addClass("alert alert-danger").text(e)}JSZip.support.blob||s("This demo works only with a recent browser !")}()}()}else window.alert("Please Login First")}}(document);'>
                                 <i class="fas fa-bookmark"></i>
                                 <span class="ml-2">Pack Notes</span>
                             </a>
