--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <p>
                                 目前支援 Chrome，使用方法把下方按鈕拖到書籤列就好。
                                 <br> 其他瀏覽器使用方法請到
-                                <a href="#" target="_blank">Github</a> 查看詳情。
+                                <a href="https://github.com/hbdoy/hackmd_download" target="_blank">Github</a> 查看詳情。
                                 <br> 非營利用途，如有侵權請立即告知。
                             </p>
                         </wired-card>
