--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name='keywords' content='下載,文件,筆記,hackmd,download,匯出' />
+    <meta name='author' content='hbdoy' />
+    <meta name='description' content='HackMD 筆記打包下載' />
+    <meta property="og:title" content="HackMD 筆記打包下載" />
+    <meta property="og:description" content="一鍵打包">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hbdoy.github.io/hackmd_download/" />
+    <meta property="og:image" content="./img/header_s2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HackMD 打包下載</title>
@@ -18,8 +26,8 @@
         <div class="row">
             <div class="col-md-10 offset-md-1">
                 <div class="d-none d-md-block">
-                    <div class="title my-3"></div>
-                    <div class="header mb-3"></div>
+                    <h1 class="title my-3 text-hide">HackMD 打包下載</h1>
+                    <h3 class="header mb-3 text-hide">自己的文件自己保存</h3>
                 </div>
                 <div class="d-block d-md-none">
                     <div class="title_s mt-3 mb-1"></div>
