--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="js/wired-elements.bundled.min.js"></script>
 </head>
 
 <body>
@@ -61,11 +62,7 @@
 
             </div>
         </div>
-
     </div>
-
-
-    <script src="https://unpkg.com/wired-elements@latest/dist/wired-elements.bundled.min.js"></script>
 </body>
 
 </html>
