--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                         <wired-card elevation="3" class="p-3 mr-md-5">
                             <h4>ReadMe</h4>
                             <p id="readme">
-                                目前支援 Chrome，使用方法把下方按鈕拖到書籤列就好<a class="d-inline-block d-md-none" href="https://github.com/hbdoy/hackmd_download/blob/master/img/add.gif"
+                                使用方法把下方按鈕拖到書籤列就好<a class="d-inline-block d-md-none" href="https://github.com/hbdoy/hackmd_download/blob/master/img/add.gif"
                                     targer="_blank">(範例)</a>。
-                                <br> 其他瀏覽器使用方法請到
+                                <br> Chrome 上通過測試，其他瀏覽器使用方法請到
                                 <a href="https://github.com/hbdoy/hackmd_download/blob/master/README.md" target="_blank">Github</a>
                                 查看詳情。
                                 <br> 非營利用途，如有侵權請立即告知。
